<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:netguard="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_search"
        netguard:actionViewClass="androidx.appcompat.widget.SearchView"
        netguard:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/menu_lockdown"
        android:checkable="true"
        android:title="@string/setting_lockdown"/>
    <item
        android:id="@+id/menu_log"
        android:title="@string/menu_log"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"/>
</menu>
